Version 0.4.3     unreleased

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target MacOS.
	* Update various dependencies for the developer environment.

Version 0.4.2     24 Jun 2022

	* Upgrade to smartapp-sdk v0.5.0.

Version 0.4.1     22 Jun 2022

	* Use InfluxDBClient.write_api(SYNCHRONOUS) so file handles are closed.
	* Remove cache for weather API and better handle bad data when received.

Version 0.4.0     19 Jun 2022

	* Rename GitHub repo to smartapp-sensortrack.
	* Remove cache for smartthings.retrieve_location().

Version 0.3.0     18 Jun 2022

	* Improvements/fixes to install process and documentation.

Version 0.2.0     18 Jun 2022

	* Add support for tracking current weather conditions in U.S.

Version 0.1.0     17 Jun 2022

	* Initial public release.
