@@ -1,6 +1,7 @@
 Version 0.4.3     unreleased
 
 	* Upgrade to Poetry v1.2.0 and make related build process changes.
+	* Upgrade to Pylint v2.15.0 and address warnings.
 	* Add dependency caching to GitHub Actions workflow.
 	* Fix the GitHub Actions matrix build to properly target MacOS.
 	* Update various dependencies for the developer environment.
